refactored day-card css to correctly resemble spacing on mock-up

--- a/src/app/day-card/day-card.component.scss
+++ b/src/app/day-card/day-card.component.scss
@@ -12,6 +12,10 @@
 	min-width: 300px;
 }
 
+.card:last-child {
+  margin-right: 0px;
+}
+
 .card .card-content {
 	padding: 10px 0 20px 0;
 }
